# scvi-criticism

./: .cruft.json  .flake8  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  LICENSE  README.md  README.md.rej  pyproject.toml
.github/ISSUE_TEMPLATE/: feature_request.yml
.github/workflows/: release.yml
docs/: api.md  conf.py  contributing.md  developer_docs.md  index.md  template_usage.md  tutorials.md
docs/notebooks/: example.ipynb  validations.ipynb
docs/release_notes/: index.md
src/scvi_criticism/: __init__.py  _constants.py  _de_utils.py  _ppc.py  _ppc_plot.py  _settings.py  _utils.py
tests/: test_basic.py  test_criticism.py
